republic-ai-summit-prod/deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: republicworld2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: sujeetkushwaha14/republic-aisummit:v3
          ports:
            - containerPort: 3004
          resources:
            requests:
              cpu: "2000m"       
              memory: "2Gi"       
            limits:
              cpu: "2000m"        
              memory: "4Gi"
