republic-ai-summit-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: republicworld2
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3004
  type: ClusterIP
